# wsjtx_lib

./: CMakeLists.txt  COPYING  README.md
lib/: CMakeLists.txt
lib/wsjtx/: NEWS
lib/wsjtx/lib/: C_interface_module.f90  afc65b.f90  ana932.f90  astrosub.f90  avecho.f90  averms.f90  blanker.f90  bpdecode128_90.f90  bpdecode128_90.f90.save  bpdecode144.f90  bpdecode40.f90  calibrate.f90  char.h  chkfft2.f90  chkfft3.f90  crc.f90  crc13.cpp  decode4.f90  decode9w.f90  decode_rs.c  decoder.f90  deep4.f90  degrade_snr.f90  demod64a.f90  digi-contest.txt  downsam9.f90  echo_snr.f90  echosim.f90  emedop.f90  encode4.f90  encode_128_90.f90  encode_msk40.f90  ephem.f90  extract.f90  extract4.f90  extractmessage77.f90  fano232.f90  fast9.f90  fast_decode.f90  fchisq0.f90  (+135 more)
lib/wsjtx/lib/77bit/: 77bit.txt  CQ_messages.txt  NewCode.txt  New_Features_WSJT-X_2.0.txt  all28.txt  arrl_sec.txt  call_to_c28.f90  calls.txt  calls1.txt  calls2.txt  calls3.txt  encode77.f90  encode77.out  free_text.f90  g2  g8  messages.txt  messages_2.txt  msgtypes.txt  msgtypes.txt.0  my_hash.f90  nonstd_to_c58.f90  packjt77.f90  parse77.f90  test28.f90  test28.txt  todo.txt  tokens.txt  wsjt-x_v2.0.txt
lib/wsjtx/lib/fst4/: bpdecode240_101.f90  decode240_101.f90  decode240_74.f90  encode240_101.f90  encode240_74.f90  fastosd240_74.f90  fst4sim.f90  gen_fst4wave.f90  genfst4.f90  get_crc24.f90  get_fst4_bitmetrics.f90  get_fst4_bitmetrics2.f90  ldpc_240_101_generator.f90  ldpc_240_101_parity.f90  ldpc_240_74_generator.f90  ldpc_240_74_parity.f90  ldpcsim240_101.f90  ldpcsim240_74.f90  osd240_101.f90  osd240_74.f90
lib/wsjtx/lib/ft2/: cdatetime.f90  ft2.f90  ft2.ini  ft2_decode.f90  ft2_gfsk_iwave.f90  ft2_iwave.f90  ft2_params.f90  ft2audio.c  g4.cmd  gcom1.f90  genft2.f90  getcandidates2a.f90  ptt.c  ptt_unix.c
lib/wsjtx/lib/ft4/: clockit.f90  ft4_downsample.f90  ft4_testmsg.f90  ft4code.f90  ft4sim.f90  ft4sim_mult.f90  gen_ft4wave.f90  genft4.f90  get_ft4_bitmetrics.f90  getcandidates4.f90  messages.txt  subtractft4.f90
lib/wsjtx/lib/ft8/: bpdecode174_91.f90  chkcrc13a.f90  chkdec.f90  decode174_91.f90  encode174.f90  encode174_91.f90  encode174_91_nocrc.f90  ft8_a7.f90  ft8_testmsg.f90  ft8apset.f90  ft8b.f90  ft8c.f90  ft8code.f90  ft8d.f90  ft8q3.f90  ft8sim.f90  gen_ft8wave.f90  genft8.f90  genft8refsig.f90  get_crc14.f90  ldpc_174_91_c_colorder.f90  ldpcsim174_91.f90  osd174_91.f90  subtractft8.f90  test_ft8q3.f90
lib/wsjtx/lib/ftrsd/: decode_rs.c  extract2.f90  ftrsd2.c  ftrsdap.c  init_rs.c  sfrsd2.h
lib/wsjtx/lib/qra/q65/: Makefile.Win  build.sh  ebnovalues.txt  genq65.f90  normrnd.c  pdmath.h  q65.c  q65.f90  q65.h  q65.sln  q65.vcproj  q65_ap.f90  q65_encoding_modules.f90  q65_ftn_test.f90  q65_loops.f90  q65_set_list.f90  q65_subs.c  q65code.f90  q65sim.f90  q65test.c  qra15_65_64_irr_e23.c  qra15_65_64_irr_e23.h  qracodes.c  qracodes.h  wer-ff-qra15_65_64_irr_e23-ap00.txt
lib/wsjtx/lib/qra/qracodes/: Makefile.Win  ebno10000.txt  ebnovalues.txt  ebnovaluesfast.txt  main.c  normrnd.h  npfwht.c  npfwht.h  pdmath.c  qra12_63_64_irr_b.c  qra12_63_64_irr_b.h  qra13_64_64_irr_e.c  qra13_64_64_irr_e.h  qracodes.h
lib/wsjtx/lib/wsprcode/: go.sh  wspr_old_subs.f90  wsprcode.f90
lib/wsjtx/lib/wsprd/: Makefile  README  osdwspr.f90  wspr_params.f90  wspr_wav.f90  wsprd.c  wsprsim.c  wsprsim_utils.c  wsprsimf.f90
