enable_language(Fortran)

set(CMAKE_Fortran_FLAGS_RELEASE "${CMAKE_Fortran_FLAGS_RELEASE} -O3 ${General_FFLAGS}")
set(CMAKE_Fortran_FLAGS_DEBUG   "${CMAKE_Fortran_FLAGS_DEBUG} -fbounds-check ${General_FFLAGS}")
set(CMAKE_Fortran_FLAGS_DEBUG   "${CMAKE_Fortran_FLAGS_DEBUG} -g -fbacktrace -fbounds-check -fno-f2c -ffpe-summary=invalid,zero,overflow,underflow ${General_FFLAGS}")

option(BUILD_SHARED_LIBS "Build shared as library (as opposed to static)" OFF)

if (BUILD_SHARED_LIBS)
  add_library(${PROJECT_NAME} SHARED ${SOURCES})
else()
  add_library(${PROJECT_NAME} STATIC ${SOURCES})
endif()

target_sources(${PROJECT_NAME} PUBLIC
  wsjtx/lib/77bit/my_hash.f90
  wsjtx/lib/77bit/packjt77.f90
  wsjtx/lib/addit.f90
  wsjtx/lib/afc65b.f90
  wsjtx/lib/afc9.f90
  wsjtx/lib/ana64.f90
  wsjtx/lib/ana932.f90
  wsjtx/lib/analytic.f90
  wsjtx/lib/astro0.f90
  wsjtx/lib/astro.f90
  wsjtx/lib/astrosub.f90
  wsjtx/lib/avecho.f90
  wsjtx/lib/averms.f90
  wsjtx/lib/azdist.f90
  wsjtx/lib/baddata.f90
  wsjtx/lib/blanker.f90
  wsjtx/lib/bpdecode128_90.f90
  wsjtx/lib/bpdecode40.f90
  wsjtx/lib/calibrate.f90
  wsjtx/lib/ccf2.f90
  wsjtx/lib/ccf65.f90
  wsjtx/lib/chkcall.f90
  wsjtx/lib/chkhist.f90
  wsjtx/lib/chkmsg.f90
  wsjtx/lib/chkss2.f90
  wsjtx/lib/C_interface_module.f90
  wsjtx/lib/coord.f90
  wsjtx/lib/crc.f90
  wsjtx/lib/db.f90
  wsjtx/lib/decode4.f90
  wsjtx/lib/decode65a.f90
  wsjtx/lib/decode65b.f90
  wsjtx/lib/decode9w.f90
  wsjtx/lib/decoder.f90
  wsjtx/lib/deep4.f90
  wsjtx/lib/deg2grid.f90
  wsjtx/lib/degrade_snr.f90
  wsjtx/lib/demod64a.f90
  wsjtx/lib/determ.f90
  wsjtx/lib/downsam9.f90
  wsjtx/lib/encode_128_90.f90
  wsjtx/lib/encode232.f90
  wsjtx/lib/encode4.f90
  wsjtx/lib/encode_msk40.f90
  wsjtx/lib/entail.f90
  wsjtx/lib/ephem.f90
  wsjtx/lib/extract4.f90
  wsjtx/lib/extract.f90
  wsjtx/lib/extractmessage77.f90
  wsjtx/lib/fano232.f90
  wsjtx/lib/fast9.f90
  wsjtx/lib/fast_decode.f90
  wsjtx/lib/fchisq0.f90
  wsjtx/lib/fchisq65.f90
  wsjtx/lib/fchisq.f90
  wsjtx/lib/fftw3mod.f90
  wsjtx/lib/fil3c.f90
  wsjtx/lib/fil3.f90
  wsjtx/lib/fil4.f90
  wsjtx/lib/fil6521.f90
  wsjtx/lib/filbig.f90
  wsjtx/lib/fitcal.f90
  wsjtx/lib/flat1a.f90
  wsjtx/lib/flat1b.f90
  wsjtx/lib/flat1.f90
  wsjtx/lib/flat2.f90
  wsjtx/lib/flat4.f90
  wsjtx/lib/flat65.f90
  wsjtx/lib/fmtmsg.f90
  wsjtx/lib/foldspec9f.f90
  wsjtx/lib/four2a.f90
  wsjtx/lib/freqcal.f90
  wsjtx/lib/fst4/decode240_101.f90
  wsjtx/lib/fst4/decode240_74.f90
  wsjtx/lib/fst4_decode.f90
  wsjtx/lib/fst4/encode240_101.f90
  wsjtx/lib/fst4/encode240_74.f90
  wsjtx/lib/fst4/fastosd240_74.f90
  wsjtx/lib/fst4/fst4_baseline.f90
  wsjtx/lib/fst4/fst4sim.f90
  wsjtx/lib/fst4/genfst4.f90
  wsjtx/lib/fst4/gen_fst4wave.f90
  wsjtx/lib/fst4/get_crc24.f90
  wsjtx/lib/fst4/get_fst4_bitmetrics2.f90
  wsjtx/lib/fst4/get_fst4_bitmetrics.f90
  wsjtx/lib/fst4/ldpcsim240_101.f90
  wsjtx/lib/fst4/ldpcsim240_74.f90
  wsjtx/lib/fst4/lorentzian_fading.f90
  wsjtx/lib/fst4/osd240_101.f90
  wsjtx/lib/fst4/osd240_74.f90
  wsjtx/lib/ft2/gfsk_pulse.f90
  wsjtx/lib/ft4/clockit.f90
  wsjtx/lib/ft4_decode.f90
  wsjtx/lib/ft4/ft4_baseline.f90
  wsjtx/lib/ft4/ft4code.f90
  wsjtx/lib/ft4/ft4_downsample.f90
  wsjtx/lib/ft4/ft4sim.f90
  wsjtx/lib/ft4/ft4sim_mult.f90
  wsjtx/lib/ft4/genft4.f90
  wsjtx/lib/ft4/gen_ft4wave.f90
  wsjtx/lib/ft4/getcandidates4.f90
  wsjtx/lib/ft4/get_ft4_bitmetrics.f90
  wsjtx/lib/ft4/subtractft4.f90
  wsjtx/lib/ft4/sync4d.f90
  wsjtx/lib/ft8/baseline.f90
  wsjtx/lib/ft8/bpdecode174_91.f90
  wsjtx/lib/ft8/chkcrc13a.f90
  wsjtx/lib/ft8/chkcrc14a.f90
  wsjtx/lib/ft8/compress.f90
  wsjtx/lib/ft8/decode174_91.f90
  wsjtx/lib/ft8_decode.f90
  wsjtx/lib/ft8/encode174_91.f90
  wsjtx/lib/ft8/encode174_91_nocrc.f90
  wsjtx/lib/ft8/filt8.f90
  wsjtx/lib/ft8/foxfilt.f90
  wsjtx/lib/ft8/foxgen.f90
  wsjtx/lib/ft8/foxgen_wrap.f90
  wsjtx/lib/ft8/ft8_a7.f90
  wsjtx/lib/ft8/ft8apset.f90
  wsjtx/lib/ft8/ft8b.f90
  wsjtx/lib/ft8/ft8code.f90
  wsjtx/lib/ft8/ft8_downsample.f90
  wsjtx/lib/ft8/ft8sim.f90
  wsjtx/lib/ft8/genft8.f90
  wsjtx/lib/ft8/genft8refsig.f90
  wsjtx/lib/ft8/gen_ft8wave.f90
  wsjtx/lib/ft8/get_crc14.f90
  wsjtx/lib/ft8/get_spectrum_baseline.f90
  wsjtx/lib/ft8/h1.f90
  wsjtx/lib/ft8/osd174_91.f90
  wsjtx/lib/ft8/subtractft8.f90
  wsjtx/lib/ft8/sync8d.f90
  wsjtx/lib/ft8/sync8.f90
  wsjtx/lib/ft8/twkfreq1.f90
  wsjtx/lib/ft8/watterson.f90
  wsjtx/lib/gen4.f90
  wsjtx/lib/gen65.f90
  wsjtx/lib/gen9.f90
  wsjtx/lib/genmsk_128_90.f90
  wsjtx/lib/genmsk40.f90
  wsjtx/lib/genwave.f90
  wsjtx/lib/genwspr.f90
  wsjtx/lib/geodist.f90
  wsjtx/lib/getlags.f90
  wsjtx/lib/getmet4.f90
  wsjtx/lib/graycode65.f90
  wsjtx/lib/graycode.f90
  wsjtx/lib/grayline.f90
  wsjtx/lib/grid2deg.f90
  wsjtx/lib/hash.f90
  wsjtx/lib/hashing.f90
  wsjtx/lib/hint65.f90
  wsjtx/lib/hspec.f90
  wsjtx/lib/indexx.f90
  wsjtx/lib/init_random_seed.f90
  wsjtx/lib/interleave4.f90
  wsjtx/lib/interleave63.f90
  wsjtx/lib/interleave9.f90
  wsjtx/lib/inter_wspr.f90
  wsjtx/lib/iso_c_utilities.f90
  wsjtx/lib/jplsubs.f
  wsjtx/lib/jt4_decode.f90
  wsjtx/lib/jt4.f90
  wsjtx/lib/jt65_decode.f90
  wsjtx/lib/jt65_mod.f90
  wsjtx/lib/jt9_decode.f90
  wsjtx/lib/jt9fano.f90
  wsjtx/lib/jtmsg.f90
  wsjtx/lib/libration.f90
  wsjtx/lib/lorentzian.f90
  wsjtx/lib/lpf1.f90
  wsjtx/lib/makepings.f90
  wsjtx/lib/map65_mmdec.f90
  wsjtx/lib/mixlpf.f90
  wsjtx/lib/moondopjpl.f90
  wsjtx/lib/morse.f90
  wsjtx/lib/move.f90
  wsjtx/lib/msk144decodeframe.f90
  wsjtx/lib/msk144_freq_search.f90
  wsjtx/lib/msk144signalquality.f90
  wsjtx/lib/msk144sim.f90
  wsjtx/lib/msk144spd.f90
  wsjtx/lib/msk144sync.f90
  wsjtx/lib/msk40decodeframe.f90
  wsjtx/lib/msk40_freq_search.f90
  wsjtx/lib/msk40spd.f90
  wsjtx/lib/msk40sync.f90
  wsjtx/lib/mskrtd.f90
  wsjtx/lib/mskrtd.f90
  wsjtx/lib/nuttal_window.f90
  wsjtx/lib/options.f90
  wsjtx/lib/osd128_90.f90
  wsjtx/lib/packjt.f90
  wsjtx/lib/pctile.f90
  wsjtx/lib/peakdt9.f90
  wsjtx/lib/peakup.f90
  wsjtx/lib/platanh.f90
  wsjtx/lib/plotsave.f90
  wsjtx/lib/pltanh.f90
  wsjtx/lib/polyfit.f90
  wsjtx/lib/prog_args.f90
  wsjtx/lib/ps4.f90
  wsjtx/lib/q65_decode.f90
  wsjtx/lib/qra/q65/genq65.f90
  wsjtx/lib/qra/q65/q65_ap.f90
  wsjtx/lib/qra/q65/q65_encoding_modules.f90
  wsjtx/lib/qra/q65/q65.f90
  wsjtx/lib/qra/q65/q65_loops.f90
  wsjtx/lib/qra/q65/q65_set_list.f90
  wsjtx/lib/readwav.f90
  wsjtx/lib/refspectrum.f90
  wsjtx/lib/savec2.f90
  wsjtx/lib/sec0.f90
  wsjtx/lib/sec_midn.f90
  wsjtx/lib/setup65.f90
  wsjtx/lib/sh65.f90
  wsjtx/lib/sh65snr.f90
  wsjtx/lib/shell.f90
  wsjtx/lib/shmem.f90
  wsjtx/lib/slasubs.f
  wsjtx/lib/sleep_msec.f90
  wsjtx/lib/slope.f90
  wsjtx/lib/smo121.f90
  wsjtx/lib/smo.f90
  wsjtx/lib/softsym9f.f90
  wsjtx/lib/softsym9w.f90
  wsjtx/lib/softsym.f90
  wsjtx/lib/spec64.f90
  wsjtx/lib/spec9f.f90
  wsjtx/lib/stdmsg.f90
  wsjtx/lib/subtract65.f90
  wsjtx/lib/sun.f90
  wsjtx/lib/symspec2.f90
  wsjtx/lib/symspec65.f90
  wsjtx/lib/symspec.f90
  wsjtx/lib/sync4.f90
  wsjtx/lib/sync65.f90
  wsjtx/lib/sync9.f90
  wsjtx/lib/sync9f.f90
  wsjtx/lib/sync9w.f90
  wsjtx/lib/timer_C_wrapper.f90
  wsjtx/lib/timer_impl.f90
  wsjtx/lib/timer_module.f90
  wsjtx/lib/timf2.f90
  wsjtx/lib/tweak1.f90
  wsjtx/lib/twkfreq65.f90
  wsjtx/lib/twkfreq.f90
  wsjtx/lib/types.f90
  wsjtx/lib/update_msk40_hasharray.f90
  wsjtx/lib/update_recent_calls.f90
  wsjtx/lib/wav11.f90
  wsjtx/lib/wav12.f90
  wsjtx/lib/wavhdr.f90
  wsjtx/lib/wqdecode.f90
  wsjtx/lib/wqencode.f90
  wsjtx/lib/wsprd/osdwspr.f90
  wsjtx/lib/wspr_downsample.f90
  wsjtx/lib/xcor4.f90
  wsjtx/lib/xcor.f90
  wsjtx/lib/zplot9.f90

  wsjtx/lib/usleep.c 
  wsjtx/lib/qra/q65/q65.c 
  wsjtx/lib/qra/q65/fadengauss.c 
  wsjtx/lib/qra/q65/fadenlorentz.c 
  wsjtx/lib/qra/q65/normrnd.c 
  wsjtx/lib/qra/q65/npfwht.c 
  wsjtx/lib/qra/q65/pdmath.c 
  wsjtx/lib/qra/q65/q65_subs.c 
  wsjtx/lib/qra/q65/qra15_65_64_irr_e23.c 
  wsjtx/lib/qra/q65/qracodes.c 
  wsjtx/lib/igray.c 
  wsjtx/lib/ftrsd/ftrsd2.c 
  wsjtx/lib/ftrsd/ftrsdap.c 
  wsjtx/lib/ftrsd/sfrsd3.c 
  wsjtx/lib/decode_rs.c 
  wsjtx/lib/encode_rs.c 
  wsjtx/lib/init_rs.c 
  wsjtx/lib/wrapkarn.c 
)
